--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,7 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>           
         
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>         
+             
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -65,6 +62,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
         
         
